# poly-calc

./: CMakeLists.txt  README.md
src/: calc_poly.c  chain_poly.sh  poly.c  poly.h  stack_poly.c  stack_poly.h  unit_tests_poly.c  utils.h
